Introduce data tracking for gdpr and transfer (#11)
* Partially refactor repository sql queries

* Streamline repositories

* Add metadata-driven data tracking system

Introduces data_tracking.json as the single source of truth for table
metadata across station transfer, GDPR export, and GDPR deletion. The
existing per-table imperative code in StationExportService,
StationImportService, GdprExportService, and GdprDeletionService is
replaced by metadata-driven engines (GenericTableExporter,
GenericTableImporter, GenericGdprExporter, GenericGdprDeleter) that read
the tracking metadata at runtime.

Adds a dev-only admin panel at /admin/data-tracking for inspecting and
editing the tracking metadata, including batch status updates, column
verification, and per-strategy review. The panel is gated by
import.meta.env.DEV on the frontend and Demo.dev() on the backend.

* Cleanup